# Check-in-tool

./: .env.example  .gitignore  README.md  compose.yaml
.github/workflows/: backend-ci.yml  flutter-ci.yml  pages.yml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
backend/migrations/: 0001_initial.sql
backend/src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  risk.rs  state.rs
backend/src/routes/: api.rs  health.rs  mod.rs
client/: .metadata  README.md  pubspec.yaml
client/android/app/: build.gradle.kts
client/android/app/src/main/: AndroidManifest.xml
client/ios/Runner/: Info.plist
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: main.dart
client/lib/src/: app.dart
client/lib/src/config/: app_config.dart
client/lib/src/controllers/: attendance_controller.dart
client/lib/src/data/: attendance_repository.dart  demo_attendance_repository.dart  remote_attendance_repository.dart
client/lib/src/models/: attendance.dart
client/lib/src/screens/home/: attendance_home_screen.dart
client/lib/src/screens/home/widgets/: clock_toolbar.dart  hero_time_card.dart  weekly_hours_card.dart  work_insights.dart
client/lib/src/services/: biometric_authenticator.dart  device_identity_service.dart  synced_clock.dart
client/lib/src/theme/: app_theme.dart
client/lib/src/utils/: formatters.dart
client/lib/src/widgets/: expressive_indicators.dart
client/test/: remote_attendance_repository_test.dart  widget_test.dart
client/web/: index.html  manifest.json
docs/: design.md  security.md
(+1 files in other folders)
