[package]
name = "check-in-backend"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
ipnetwork = "0.20"
jsonwebtoken = "9.3"
redis = { version = "0.32", features = ["connection-manager", "tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["chrono", "ipnetwork", "json", "macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
subtle = "2.6"
tokio = { version = "1.0", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6", features = ["cors", "limit", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["serde", "v4"] }

[lints.rust]
unsafe_code = "forbid"
